# ChatbotAI

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agents/day20-e2e-de65600c761d454bbcd1f9fd8e41c8e1/: bot.db  bot.db-shm  bot.db-wal  deliveries.db  tracker.db
.agents/day20-e2e-de65600c761d454bbcd1f9fd8e41c8e1/reports/2026-06-28/: day-20-multi-server-report-e7bf8d05.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  lib.rs  main.rs  mcp.rs
