[package]
name = "chatbot-ai-desktop"
version = "0.1.0"
description = "Desktop chatbot agent built with Tauri, React, and OpenAI API"
authors = ["ChatbotAI"]
edition = "2021"

[lib]
name = "chatbot_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["io-util", "process", "time"] }
